20/03/2014 Version 0.2
	-Added Arte
	-Added France TV Pluzz
	-Added Favorite Management

14/03/2014 Version 0.1 par SPM
    - Canal+ OK
    TODO:
    	-Icon Addon
    	-Show only Favorites unseen
    	-Other channels
    		-Pluzz
    		-D8
    		-D17
    		-Gully
    		-HD1
    		-NT1
    		-Arte
    		-BFM TV
    		-France 24
    		-TF1
    		-M6/W9
    		-equipe TV
    		    		
    	-Contextual Menu
    		-Mark as watched
    		-Download
    		-Mark All as Watched
    		-Add to Favorites
    	-Settings
    		-Video Quality
    		-Channels to Display
    	




